--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pixel Art Generator</title>
+    <title>Pesquisa</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Pixel Art Generator</h1>
-        <input type="file" id="imageInput" accept="image/*">
-        <input type="text" id="customMessage" placeholder="Enter your message">
-        <button id="generateButton">Generate Pixel Art</button>
-        <canvas id="pixelCanvas"></canvas>
-        <p id="message"></p>
+        <img src="nabrisa.png" alt="Logo" class="logo">
+        <form id="search-form">
+            <input type="text" id="search-input" placeholder="Pesquise aqui..." required>
+            <button type="submit">Pesquisar</button>
+        </form>
     </div>
     <script src="script.js"></script>
 </body>
-</html>
+</html>>
