--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <form id="search-form">
             <input type="text" id="search-input" placeholder="Pesquise aqui..." required>
             <button type="submit">Pesquisar</button>
+<p> Use palavras chaves referentes ao site para pesquisar</p>
         </form>
     </div>
     <script src="script.js"></script>
