--- a/testecentral.html
+++ b/testecentral.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Central</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="scripts.js" defer></script>
+    <link rel="stylesheet" href="csscentral.css">
+    <script src="jscentral.js" defer></script>
 </head>
 <body>
     <!-- Barra de Navegação -->
