--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nabri$a</title>
+   <title>Nabri$a</title>
     <link rel="stylesheet" href="styles.css">
     <script src="scripts.js" defer></script>
 </head>
 <body>
+    <!-- Cabeçalho com Logo -->
     <header class="search-header">
+        <img src="nabrisa.png" alt="Logo do Site" class="logo">
         <h1>Pesquise ou Navegue</h1>
     </header>
 
@@ -18,6 +20,7 @@
         <button id="search-button">Pesquisar</button>
 <p> Use palavras chaves referentes ao site para pesquisar</p>
     </section>
+
     <!-- Botões com Ícones -->
     <section class="button-area">
         <button class="icon-button" onclick="redirect('https://www.google.com')">
