--- a/cartinhas.html
+++ b/cartinhas.html
@@ -40,7 +40,21 @@
                 }).addTo(map);
             });
 
-        // Estados do Brasil com imagens
+
+//países com imagens
+        var paises = [
+    { name: "Argentina", lat: -38.4161, lon: -63.6167, img: "img/argentina.jpg" },
+    { name: "Senegal", lat: 14.4974, lon: -14.4524, img: "img/senegal.jpg" },
+    { name: "Espanha", lat: 40.4637, lon: -3.7492, img: "img/espanha.jpg" },
+    { name: "Portugal", lat: 39.3999, lon: -8.2245, img: "img/portugal.jpg" }
+];
+
+paises.forEach(function(pais) {
+    L.marker([pais.lat, pais.lon]).addTo(map)
+        .bindPopup(`<b>${pais.name}</b><br><img src="${pais.img}" class="popup-img">`);
+});
+
+// Estados do Brasil com imagens
         var estadosBrasil = [
             { name: "Acre", lat: -9.0238, lon: -70.8120, img: "img/acre.jpg" },
             { name: "Alagoas", lat: -9.5713, lon: -36.7819, img: "img/Alagoas.jpg" },
